--- a/build.yaml
+++ b/build.yaml
@@ -17,5 +17,5 @@ include:
     shield: kblunix_left
   - board: nice_nano_v2
     shield: kblunix_right
-  - board: nice_nano_v2
-    shield: settings_reset
+  #- board: nice_nano_v2
+  #  shield: settings_reset
