fixed up some stuff

--- a/build.yaml
+++ b/build.yaml
@@ -16,6 +16,6 @@ include:
   - board: nice_nano_v2
     shield: kblunix_left nice_view
   - board: nice_nano_v2
-    shield: kblunix_right noce_view
+    shield: kblunix_right nice_view
   #- board: nice_nano_v2
   #  shield: settings_reset
