trying to config dispaly

--- a/build.yaml
+++ b/build.yaml
@@ -14,7 +14,7 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: kblunix_left nice_view
+    shield: kblunix_left
   - board: nice_nano_v2
     shield: kblunix_right nice_view
   #- board: nice_nano_v2
